--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/es6-shim": "^0.31.37",
     "@types/node": "^7.0.7",
+    "cheerio": "^1.0.0-rc.2",
     "discord.io": "github:woor/discord.io#gateway_v6",
+    "request": "^2.88.0",
     "rxjs": "^6.3.2",
     "typescript": "^3.0.3"
   }
