--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@types/es6-shim": "^0.31.37",
+    "@types/mongodb": "^3.1.9",
+    "@types/mongoose": "^5.2.17",
     "@types/node": "^7.0.7",
     "cheerio": "^1.0.0-rc.2",
     "discord.io": "jesuscc1993/discord.io",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.3.0",
     "request": "^2.88.0",
     "rxjs": "^6.3.2",
     "typescript": "^3.0.3"
