--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/mongodb": "^3.1.9",
     "@types/mongoose": "^5.2.17",
     "@types/node": "^7.0.7",
+    "@types/request": "^2.47.1",
     "cheerio": "^1.0.0-rc.2",
     "discord.io": "jesuscc1993/discord.io",
     "mongodb": "^3.1.6",
