--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/node": "^7.0.7",
     "@types/request": "^2.47.1",
     "cheerio": "^1.0.0-rc.2",
-    "discord.io": "jesuscc1993/discord.io",
+    "discord.js": "^11.4.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
     "request": "^2.88.0",
