--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@types/es6-shim": "^0.31.37",
+    "@types/lodash": "^4.14.116",
     "@types/mongodb": "^3.1.9",
     "@types/mongoose": "^5.2.17",
     "@types/node": "^7.0.7",
     "@types/request": "^2.47.1",
     "discord.js": "^11.4.2",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
     "request": "^2.88.0",
