--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   "dependencies": {
     "@types/es6-shim": "^0.31.37",
     "@types/lodash": "^4.14.116",
+    "@types/moment": "^2.13.0",
     "@types/mongodb": "^3.1.9",
     "@types/mongoose": "^5.2.17",
     "@types/node": "^7.0.7",
     "@types/request": "^2.47.1",
+    "@types/winston": "^2.4.4",
     "discord.js": "^11.4.2",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
     "request": "^2.88.0",
     "rxjs": "^6.3.2",
-    "typescript": "^3.0.3"
+    "typescript": "^3.0.3",
+    "winston": "^3.1.0"
   }
 }
