Ran prettier and added message on guidl joined

--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "rxjs": "^6.3.2",
     "typescript": "^3.0.3",
     "winston": "^3.1.0"
+  },
+  "prettier": {
+    "printWidth": 160,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
