--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "build/app.js",
   "scripts": {
-    "build": "tsc -p ./",
+    "build": "tsc",
     "serve": "node build/app.js",
     "start": "tsc && npm run serve"
   },
@@ -19,6 +19,7 @@
     "@types/node": "^7.0.7",
     "@types/request": "^2.47.1",
     "@types/winston": "^2.4.4",
+    "discord-bot": "jesuscc1993/discord-bot#dist",
     "discord.js": "^11.4.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
