--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
     "start": "tsc && npm run serve"
   },
   "dependencies": {
-    "@types/es6-shim": "^0.31.37",
-    "@types/mongodb": "^3.1.9",
-    "@types/mongoose": "^5.2.17",
-    "@types/node": "^7.0.7",
-    "@types/request": "^2.47.1",
-    "@types/winston": "^2.4.4",
     "discord-bot": "jesuscc1993/discord-bot#dist",
     "discord.js": "^11.4.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
     "request": "^2.88.0",
     "rxjs": "^6.3.2",
-    "typescript": "^3.0.3",
     "winston": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/es6-shim": "^0.31.37",
+    "@types/mongodb": "^3.1.9",
+    "@types/mongoose": "^5.2.17",
+    "@types/node": "^7.0.7",
+    "@types/request": "^2.47.1",
+    "@types/winston": "^2.4.4",
+    "typescript": "^3.0.3"
   },
   "prettier": {
     "printWidth": 120,
