--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
   "main": "build/app.js",
   "scripts": {
     "build": "tsc",
+    "lint": "tsc --noEmit > logs/tslint.log",
     "serve": "node build/app.js",
     "start": "tsc && npm run serve"
   },
   "dependencies": {
     "discord-bot": "jesuscc1993/discord-bot#dist",
-    "discord.js": "^11.4.2",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.7.5",
+    "discord.js": "^11.5.1",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.7",
     "request": "^2.88.0",
-    "rxjs": "^6.3.2",
-    "winston": "^3.1.0"
+    "rxjs": "^6.5.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.37",
-    "@types/mongodb": "^3.1.9",
-    "@types/mongoose": "^5.2.17",
-    "@types/node": "^7.0.7",
+    "@types/mongoose": "^5.5.28",
+    "@types/mongodb": "^3.3.8",
+    "@types/node": "10.1.2",
     "@types/request": "^2.47.1",
-    "@types/winston": "^2.4.4",
-    "typescript": "^3.0.3"
+    "typescript": "^3.6.4"
   },
   "prettier": {
     "printWidth": 120,
