--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "discord-bot": "jesuscc1993/discord-bot#dist",
-    "discord.js": "discordjs/discord.js",
+    "discord.js": "^12.0.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.7",
     "request": "^2.88.0",
