--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-.idea
 .history
-npm-debug.log
-logs/*
-!logs/.gitkeep
-build
-node_modules
-src/settings
+.idea
+.env
+/env
+/build
+/logs/*
+!/logs/.gitkeep
+/node_modules
+/src/settings/*
 !src/settings/index.ts
 !src/settings/settings.example.ts
+npm-debug.log
