--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "discord-bot": "jesuscc1993/discord-bot#dist",
     "discord.js": "^12.0.1",
+    "dotenv": "^8.2.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.9.3",
     "request": "^2.88.0",
