--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "discord-bot": "jesuscc1993/discord-bot#dist",
-    "discord.js": "^12.0.1",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.9.3",
     "request": "^2.88.0",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.6.0",
     "winston": "^3.2.1"
   },
   "description": "Provides web search functionalities with custom scopes",
@@ -34,7 +34,10 @@
     "url": "https://github.com/jesuscc1993/querybot"
   },
   "scripts": {
-    "start": "node build/app.js"
+    "build": "tsc",
+    "lint": "tsc --noEmit",
+    "serve": "node build/app.js",
+    "start": "tsc && npm run serve"
   },
   "version": "1.0.0"
 }
