--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mongodb": "^3.3.2",
     "mongoose": "^5.9.3",
     "request": "^2.88.0",
+    "rimraf": "^3.0.2",
     "rxjs": "^6.6.0",
     "winston": "^3.2.1"
   },
@@ -21,6 +22,7 @@
     "node": "12.15.0",
     "yarn": "1.16.0"
   },
+  "license": "CC-BY-NC-SA-4.0",
   "main": "build/app.js",
   "name": "querybot",
   "prettier": {
