--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "discord-bot": "jesuscc1993/discord-bot#dist",
+    "discord-bot": "jesuscc1993/discord-bot#64883df",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "mongodb": "^3.3.2",
