--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "mongodb": "^3.3.2",
-    "mongoose": "^5.9.3",
+    "mongoose": "5.12.3",
     "request": "^2.88.0",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.0",
@@ -12,8 +12,6 @@
   },
   "description": "Provides web search functionalities with custom scopes",
   "devDependencies": {
-    "@types/mongodb": "^3.3.8",
-    "@types/mongoose": "^5.5.28",
     "@types/node": "^12.12.6",
     "@types/request": "^2.47.1",
     "typescript": "^3.7.5"
